src/objects/pse__Resource_Request__c.object
<CustomObject>
    <fields>
        <fullName>pse__Suggested_Bill_Rate_Number__c</fullName>
        <label>Suggested Bill Rate Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Suggested_Bill_Rate__c</fullName>
        <formula>pse__Suggested_Bill_Rate_Currency_Code__c &amp; &apos; &apos; &amp; TEXT(pse__Suggested_Bill_Rate_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Suggested Bill Rate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Update_Related_Resource_Requests__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the staffing fields on the resource request are updated when a resource request belonging to the same resource request set as this one is staffed.</description>
        <inlineHelpText>Indicates whether the staffing fields on the resource request are updated when a resource request belonging to the same resource request set as this one is staffed.</inlineHelpText>
        <label>Update Related Resource Requests</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Utilization_Run__c</fullName>
        <description>The ID of the utilization run that most recently processed this resource request.</description>
        <inlineHelpText>The ID of the utilization run that most recently processed this resource request.</inlineHelpText>
        <label>Utilization Run</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Work_City_PSA__c</fullName>
        <label>Work City (PSA)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Work_Country_PSA__c</fullName>
        <label>Work Country (PSA)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Work_PostalCode_PSA__c</fullName>
        <label>Work Zip/Postal Code (PSA)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Work_State_PSA__c</fullName>
        <label>Work State/Province (PSA)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Work_Street_PSA__c</fullName>
        <label>Work Street (PSA)</label>
        <type>TextArea</type>
    </fields>
    <label>Resource Request</label>
    <nameField>
        <displayFormat>RR-{0000000}</displayFormat>
        <label>Resource Request Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Requests</pluralLabel>
    <recordTypes>
        <fullName>OWF_Resource_Request</fullName>
        <active>true</active>
        <description>OWF-MC-ESPSFDCQI-2896</description>
        <label>OWF Resource Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>RDS_Request</fullName>
        <active>true</active>
        <description>A standard R&amp;DS Resource Request</description>
        <label>RDS Request</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>pse__PSE_Member_Share__c</fullName>
        <label>PSE Member Share</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>pse__PSE_PM_Share__c</fullName>
        <label>PSE PM Share</label>
    </sharingReasons>
    <validationRules>
        <fullName>RRQ_VR01_OWFCancellation_Reason_Required</fullName>
        <active>true</active>
        <description>OWF-MC-ESPSFDCQI-2129 - VR</description>
        <errorConditionFormula>IF( AND(RecordType.DeveloperName == &apos;OWF_Resource_Request&apos;,$Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c == FALSE,ISPICKVAL( pse__Status__c , &apos;Cancelled&apos;), ISBLANK( TEXT(Cancellation_Reason__c ))) , TRUE, FALSE)</errorConditionFormula>
        <errorDisplayField>pse__Status__c</errorDisplayField>
        <errorMessage>You must select a Cancellation Reason when the Status is set to Cancelled. Please review and revise.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RRQ_VR01_PSA_RDSASNMustbeatServiceLine</fullName>
        <active>true</active>
        <description>PSA-USNONE-VR-RDS Resource Requests need to be on the Service Line Project</description>
        <errorConditionFormula>ISNEW() &amp;&amp; RecordType.DeveloperName = &apos;RDS_Request&apos; &amp;&amp; pse__Project__r.RecordType.DeveloperName != &apos;RDS_Service_Line&apos;</errorConditionFormula>
        <errorMessage>RDS Resource Requests need to be on the Service Line Project</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RRQ_VR02_OWFCancellationComment_Required</fullName>
        <active>true</active>
        <errorConditionFormula>IF( AND(RecordType.DeveloperName == &apos;OWF_Resource_Request&apos;,$Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c == FALSE,ISPICKVAL( pse__Status__c , &apos;Cancelled&apos; ), ISPICKVAL( Cancellation_Reason__c , &apos;Other&apos; ), ISBLANK( Cancellation_Comments__c ) ) , TRUE, FALSE)</errorConditionFormula>
        <errorDisplayField>Cancellation_Reason__c</errorDisplayField>
        <errorMessage>You must detail a reason for cancellation in the Cancellation Comments field when Cancellation Reason is set to Other. Please review and revise.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RRQ_VR03_OWF_CheckRequiredFields</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
$Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c == FALSE, 
RecordType.DeveloperName == &apos;OWF_Resource_Request&apos;, 
OR( 
ISBLANK( Bid_History__c ) , 
ISBLANK( pse__Group__c ) , 
ISBLANK( pse__Opportunity__c),
ISBLANK( pse__Project__c ),
ISPICKVAL( SubGroup__c,&apos;&apos; ) 
) 
)</errorConditionFormula>
        <errorMessage>Bid History, Opportunity, Group, Project and SubGroup are required fields</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RRQ_VR04_OWF_TrackChangeInRequiredFields</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
$Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c == FALSE, 
RecordType.DeveloperName == &apos;OWF_Resource_Request&apos;, 
NOT(ISNEW()),
OR( 
Bid_History__c  != PRIORVALUE(Bid_History__c) , 
pse__Group__c != PRIORVALUE(pse__Group__c ), 
pse__Opportunity__c != PRIORVALUE(pse__Opportunity__c), 
pse__Project__c  != PRIORVALUE(pse__Project__c )
) 
)</errorConditionFormula>
        <errorMessage>Agreement, Opportunity, Group &amp; Project cannot be updated</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RRQ_VR05_OWF_CheckOpportunityValue</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
$Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c == FALSE, 
RecordType.DeveloperName == &apos;OWF_Resource_Request&apos;, 
pse__Opportunity__c !=   Bid_History__r.Bid_History_Related_Opportunity__c 
)</errorConditionFormula>
        <errorMessage>Opportunity on this should be same as Opportunity on Bid History</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RRQ_VR06_OWF_IQVIA_Not_invitedToPresent</fullName>
        <active>true</active>
        <description>if the IQVIA invited to pressent field is No and Triage manager cannot create a RR.</description>
        <errorConditionFormula>AND(  ISNEW(), 
$Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c == FALSE, 
Is_Bid_Defense__c == TRUE,
RecordType.DeveloperName == &apos;OWF_Resource_Request&apos;,NOT( OR(ISPICKVAL( pse__Opportunity__r.QI_Invited_to_Present__c  , &apos;Yes&apos;),ISPICKVAL( pse__Opportunity__r.QI_Invited_to_Present__c , &apos;Not Sure&apos;)))    
)</errorConditionFormula>
        <errorMessage>You cannot create a Bid Defense Resource Request if &apos;Is IQVIA Invited to Present&apos; is No on related opportunity.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RRQ_VR07_OWF_Presentation_Cannot_BeBlank</fullName>
        <active>true</active>
        <description>Triage Manage Cannot create a resource request if the Presentation Date is Blank.</description>
        <errorConditionFormula>AND(  ISNEW(), 
$Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c == FALSE,  
Is_Bid_Defense__c == TRUE, 
RecordType.DeveloperName == &apos;OWF_Resource_Request&apos;,
ISBLANK( pse__Opportunity__r.Bid_Defense_Date__c)
)</errorConditionFormula>
        <errorMessage>You cannot create a Bid Defense Resource Request if Presentation Date is blank on related opportunity.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RRQ_VR08_OWF_CanotCreateBidDefenseOnRebd</fullName>
        <active>true</active>
        <description>Cannot create Bid Defense if the related Agreement is Rebid.</description>
        <errorConditionFormula>AND( 
$Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c == FALSE, 
Is_Bid_Defense__c == TRUE, 
RecordType.DeveloperName == &apos;OWF_Resource_Request&apos;, 
Bid_History__r.Bid_Number__c != 1 
)</errorConditionFormula>
        <errorMessage>Bid Defense Resource Request can only be created on Initial bid of type Clinical.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RRQ_VR09_OWF_StartDateInPast</fullName>
        <active>false</active>
        <errorConditionFormula>AND(RecordType.DeveloperName == &apos;OWF_Resource_Request&apos;,$Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c == FALSE,
        Is_Bid_Defense__c,
	OR(ISNEW(),ISCHANGED(  pse__Start_Date__c )),
	pse__Start_Date__c &lt; TODAY()
)</errorConditionFormula>
        <errorMessage>Please adjust the Presentation Date on Opportunity or RFP Ranking on Agreement as they are causing Bid Defense Resource Requests&apos; start date to be in past.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RRQ_VR10_OWF_RFPRankingShouldNotBeBlank</fullName>
        <active>true</active>
        <errorConditionFormula>AND(If( Is_Bid_Defense__c, NOT(OR(ISPICKVAL(Bid_History__r.RFP_Ranking__c, &apos;1&apos;),ISPICKVAL(Bid_History__r.RFP_Ranking__c, &apos;2&apos;),ISPICKVAL(Bid_History__r.RFP_Ranking__c, &apos;3&apos;),ISPICKVAL(Bid_History__r.RFP_Ranking__c, &apos;4&apos;),ISPICKVAL(Bid_History__r.RFP_Ranking__c, &apos;5&apos;))),False),$Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c == FALSE,
RecordType.DeveloperName == &apos;OWF_Resource_Request&apos;)</errorConditionFormula>
        <errorMessage>RFP should be 1, 2, 3, 4 or 5.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RRQ_VR11_OWF_CSMS_Validation</fullName>
        <active>true</active>
        <description>OWF - PSA 601 - Blocking every subgroup but CSMS-Lead PD on CSMS_bid</description>
        <errorConditionFormula>AND(Bid_History__r.RecordType.DeveloperName = &apos;CSMS_Bid&apos;, NOT(ISPICKVAL(SubGroup__c, &apos;CSMS-Lead PD&apos;)))</errorConditionFormula>
        <errorMessage>Only CSMS-Lead PD subgroup is applicable for CSMS Bid.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RRQ_VR11_OWF_PrfrdResourceOfSameSubGrp</fullName>
        <active>true</active>
        <description>OWF-ESPSFDCQI-4431-Preferred Resource selected on Initial Bid&apos;s RR should be of same sub group as that of the RR.</description>
        <errorConditionFormula>AND( 
 
$Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c == FALSE,
  ISCHANGED(Preferred_Resource__c),
  NOT(ISBLANK(Preferred_Resource__c)),
  TEXT(Preferred_Resource__r.Sub_Group__c) &lt;&gt; TEXT(SubGroup__c)   
)</errorConditionFormula>
        <errorDisplayField>Preferred_Resource__c</errorDisplayField>
        <errorMessage>The sub group of Preferred Resource does not match with that of Resource Request. Please select another resource.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RRQ_VR13_OWF_LCSValidation</fullName>
        <active>true</active>
        <description>OWF - IQVIAPSA-1318 - Restricting RR creation on the basis of Line of Business</description>
        <errorConditionFormula>AND(
$Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c
== FALSE,
ISNEW(), 
RecordType.DeveloperName == &apos;OWF_Resource_Request&apos;,
AND(ISPICKVAL(SubGroup__c , &apos;LCS Bid Defense&apos;),Is_Bid_Defense__c == false),  
Is_Created_Automatically__c == FALSE
)</errorConditionFormula>
        <errorMessage>For Safety &amp; Med Info Line of Business only LCS Product Specialist and LCS Bid Defense(with Bid Defense True) subgroup is applicable</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RRQ_VR14_OWF_DSBSubGroupForPostAwardBid</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c == FALSE,
RecordType.DeveloperName == &apos;OWF_Resource_Request&apos;,
NOT(Bid_History__r.RecordType.DeveloperName == &apos;Post_Award_Bid&apos;),
NOT(Bid_History__r.RecordType.DeveloperName == &apos;Contract_Post_Award&apos;),
OR(
 ISPICKVAL( SubGroup__c , &apos;DSB-LCS Post&apos;),
 ISPICKVAL( SubGroup__c , &apos;DSB-CEVA Post&apos;), 
 ISPICKVAL( SubGroup__c , &apos;DSB-DCT Post&apos;), 
 ISPICKVAL( SubGroup__c , &apos;DSB-DM Post&apos;), 
 ISPICKVAL( SubGroup__c , &apos;DSB-Bios Post&apos;), 
 ISPICKVAL( SubGroup__c , &apos;DSB-MW Post&apos;), 
 ISPICKVAL( SubGroup__c, &apos;DSB-GSA Post&apos; ),
 ISPICKVAL( SubGroup__c , &apos;DSB-RNPS Post&apos;), 
 ISPICKVAL( SubGroup__c, &apos;DSB-Clinical Post&apos; )
)
)</errorConditionFormula>
        <errorDisplayField>SubGroup__c</errorDisplayField>
        <errorMessage>Incorrect sub-group created for Bid type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RRQ_VR14_OWF_GBOOversight_GBOSupportPD</fullName>
        <active>true</active>
        <description>OWF - IQVIAPSA-2570 - Restricting RR creation on the basis of RR type
IQVIAPSA-6007- renaming GBO-Oversight, IQVIAPSA-8419</description>
        <errorConditionFormula>AND(
	$Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c == FALSE,
	RecordType.Name == &apos;OWF Resource Request&apos;,
	ISNEW(),
	OR(AND(Resource_Request_Type__c ==  &apos;Post Award&apos;,
		ISPICKVAL(SubGroup__c, &apos;GBO-Strategic Writer&apos;)
		),
		AND(
		OR(Resource_Request_Type__c == &apos;CSMS Bid&apos;,
			Resource_Request_Type__c == &apos;RFI&apos;,
			Resource_Request_Type__c == &apos;Non-RFP&apos;,
			Resource_Request_Type__c == &apos;Early Engagement&apos;
		),
		OR(ISPICKVAL(SubGroup__c, &apos;GBO-Strategic Writer&apos;),
			ISPICKVAL(SubGroup__c, &apos;GBO-Support PD&apos;)
		)))		
)</errorConditionFormula>
        <errorMessage>You are prohibited from submitting GBO-Strategic Writer Resource Requests for Post Award, CSMS Bids, RFI Requests, Non-RFP, and Early Engagement Bids. Additionally, you are not allowed to create GBO-Support PD Resource Requests for CSMS Bids, RFI Requests</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RRQ_VR14_ValidateLCSOnDifferentRT</fullName>
        <active>false</active>
        <description>OWF - IQVIAPSA-1318 - Restricting LCS RR creation on the basis of RT</description>
        <errorConditionFormula>AND(
$Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c
== FALSE,
ISNEW(),
RecordType.DeveloperName == &apos;OWF_Resource_Request&apos;,
OR(ISPICKVAL(SubGroup__c , &apos;LCS Product Specialist&apos;),
			ISPICKVAL(SubGroup__c , &apos;LCS Bid Defense&apos;)),			
OR(NOT(Bid_History__r.RecordType.DeveloperName==&apos;Clinical_Bid&apos;),NOT( Line_of_Business__c ==&apos;Safety &amp; Med Info&apos;)))</errorConditionFormula>
        <errorMessage>LCS Product Specialist and LCS Bid Defense are applicable on only Clinical Bid with Safety &amp; Med Info Line of business</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RRQ_VR15_OWF_RW_AIM</fullName>
        <active>false</active>
        <errorConditionFormula>AND($Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c == FALSE,
            RecordType.Name == &apos;OWF Resource Request&apos;,
            ISNEW(),
            OR(
            AND(
                Resource_Request_Type__c != &apos;Re-Clinical&apos;,
                Resource_Request_Type__c != &apos;Clinical - Ballpark&apos;,
                Resource_Request_Type__c != &apos;Clinical&apos;,
                Resource_Request_Type__c != &apos;Bid Defense&apos;,
                Resource_Request_Type__c != &apos;Post Award&apos;,
                Resource_Request_Type__c != &apos;Early Engagement&apos;,
                Resource_Request_Type__c != &apos;Non-RFP&apos;,
                Resource_Request_Type__c != &apos;RFI&apos;
            ),
            Line_of_Business__c != &apos;Outcome&apos;
            ),
            ISPICKVAL(SubGroup__c, &apos;RW AIM&apos;))</errorConditionFormula>
        <errorMessage>RW AIM Resource Requests can only be created on opportunities with Line of Business equal to Outcome</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RRQ_VR16_OWF_SubGroupOnlyForTechSolution</fullName>
        <active>true</active>
        <description>IQVIAPSA-6018: Global RFP subgroup is only available for the Tech Solutions Support Request Bid History</description>
        <errorConditionFormula>AND(OR($Setup.Mulesoft_Integration_Control__c.Is_Mulesoft_User__c = TRUE, $Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c = FALSE), NOT(ISBLANK(TEXT(SubGroup__c))), RecordType.DeveloperName = &apos;OWF_Resource_Request&apos;, Bid_History__r.RecordType.DeveloperName &lt;&gt; &apos;Tech_Solutions_Support_Request&apos;, ISPICKVAL(SubGroup__c, &apos;Global RFP&apos;))</errorConditionFormula>
        <errorDisplayField>SubGroup__c</errorDisplayField>
        <errorMessage>The Global RFP group cannot be requested on this bid type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RRQ_VR17_OWF_RestrictSubGrpForTechSolutn</fullName>
        <active>true</active>
        <description>IQVIAPSA-6018: For the Tech Solutions Support Request Bid History only Global RFP subgroup Resource Request can be created</description>
        <errorConditionFormula>AND(OR($Setup.Mulesoft_Integration_Control__c.Is_Mulesoft_User__c = TRUE, $Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c = FALSE), NOT(ISBLANK(TEXT(SubGroup__c))), RecordType.DeveloperName = &apos;OWF_Resource_Request&apos;, Bid_History__r.RecordType.DeveloperName = &apos;Tech_Solutions_Support_Request&apos;, NOT(ISPICKVAL(SubGroup__c, &apos;Global RFP&apos;)))</errorConditionFormula>
        <errorDisplayField>SubGroup__c</errorDisplayField>
        <errorMessage>Only requests for the Global RFP group can be created on this request form</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RRQ_VR18_OWF_StartDateLessThanBidDueDate</fullName>
        <active>true</active>
        <description>Start date should less than bid due date</description>
        <errorConditionFormula>And($Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c == FALSE,
            RecordType.DeveloperName = &apos;OWF_Resource_Request&apos;,
            NOT(ISNEW()),
            NOT(Is_Bid_Defense__c),
            ISCHANGED(pse__Start_Date__c),
            pse__Start_Date__c &gt; Bid_History__r.Bid_Due_Date__c
        )</errorConditionFormula>
        <errorMessage>Start Date cannot occur after Bid due Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Check_End_Date</fullName>
        <active>true</active>
        <errorConditionFormula>pse__End_Date__c &lt; pse__Start_Date__c</errorConditionFormula>
        <errorDisplayField>pse__End_Date__c</errorDisplayField>
        <errorMessage>End Date cannot occur before Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Check_Opp_Project_Mismatch</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    LEN(pse__Opportunity__c) &gt; 0,
    LEN(pse__Project__c) &gt; 0,
    LEN(pse__Project__r.pse__Opportunity__c) &gt; 0,
    pse__Project__r.pse__Opportunity__c != pse__Opportunity__c
)</errorConditionFormula>
        <errorDisplayField>pse__Project__c</errorDisplayField>
        <errorMessage>The opportunity on the resource request does not match the opportunity on the project</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Check_Self_Nomination_Deadline</fullName>
        <active>true</active>
        <description>The Self-Nomination Deadline field cannot be blank if Allow Candidates to Self-Nominate is selected.</description>
        <errorConditionFormula>AND( pse__Allow_Candidates_to_Self_Nominate__c = True, ISBLANK( pse__Self_Nomination_Deadline__c ))</errorConditionFormula>
        <errorMessage>You must complete the Self-Nomination Deadline field when Allow Candidates to Self-Nominate is selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Check_Self_Nomination_Deadline_Date</fullName>
        <active>true</active>
        <description>The date in the Self-Nomination Deadline field must be before the resource request end date.</description>
        <errorConditionFormula>pse__Self_Nomination_Deadline__c &gt;  pse__End_Date__c</errorConditionFormula>
        <errorMessage>The date in the Self-Nomination Deadline field must be before the resource request end date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Milestone_Project_Mismatch</fullName>
        <active>true</active>
        <description>Validates whether the milestone and resource request belong to the same project.</description>
        <errorConditionFormula>AND(
LEN(pse__Project__c) &gt; 0,
LEN(pse__Milestone__c) &gt; 0,
pse__Milestone__r.pse__Project__c != pse__Project__c
)</errorConditionFormula>
        <errorMessage>Cannot associate the milestone with the resource request. The milestone must belong to the resource request&apos;s project. Either change the milestone or change the project.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Project_Or_Opp_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
    LEN(pse__Opportunity__c) = 0,
    LEN(pse__Project__c) = 0
)</errorConditionFormula>
        <errorMessage>An Opportunity or Project must be set.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Project_Required_for_Milestone</fullName>
        <active>true</active>
        <description>Validates that the project is not blank when a milestone is selected on the resource request.</description>
        <errorConditionFormula>AND(LEN( pse__Milestone__c ) &gt; 0, ISBLANK(pse__Project__c))</errorConditionFormula>
        <errorMessage>Project cannot be blank if a milestone is selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Validate_Contact_Is_Resource</fullName>
        <active>true</active>
        <errorConditionFormula>(ISNEW() 
			||
			ISCHANGED( pse__Resource__c) )
			&amp;&amp;
			(AND(LEN(pse__Resource__c) &gt; 0,  
			NOT(pse__Resource__r.pse__Is_Resource__c)))</errorConditionFormula>
        <errorDisplayField>pse__Resource__c</errorDisplayField>
        <errorMessage>You must select a Contact that has the Is Resource field set to true</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Validate_Project_Opp_And_Account_Change</fullName>
        <active>true</active>
        <description>Rule to validate the change to project, opportunity or account of the resource request populated with a resource request set.</description>
        <errorConditionFormula>AND (NOT( ISBLANK(pse__Resource_Request_Set__c)), ( OR( ISCHANGED( pse__Account__c ), ISCHANGED( pse__Opportunity__c ) , ISCHANGED( pse__Project__c ) ) ) )</errorConditionFormula>
        <errorMessage>You cannot change the project, opportunity and account of a resource request that belongs to a resource request set.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Validate_Ready_to_Staff</fullName>
        <active>true</active>
        <description>Validate that correct fields are set to enter ready to staff state.</description>
        <errorConditionFormula>AND(  ISPICKVAL( pse__Status__c , &apos;Ready to Staff&apos;) ,  OR( ISNULL(pse__Start_Date__c) , ISNULL(pse__SOW_Hours__c) ))</errorConditionFormula>
        <errorMessage>You must have a valid Start Date and Hours to change status to Ready to Staff</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Validate_Status</fullName>
        <active>true</active>
        <description>Don&apos;t allow the Active status until the associated opportunity is closed/won and the request has a project.</description>
        <errorConditionFormula>AND(
    LEN(pse__Opportunity__c) &gt; 0,
    ISPICKVAL( pse__Status__c , &apos;Active&apos;),
    OR( 
        NOT( pse__Opportunity__r.IsClosed ), 
        NOT( pse__Opportunity__r.IsWon ),
        LEN(pse__Project__c) = 0
    )
)</errorConditionFormula>
        <errorDisplayField>pse__Status__c</errorDisplayField>
        <errorMessage>The Active status can only be used for closed, won opportunities and must have a project set.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__check_project_currency</fullName>
        <active>true</active>
        <description>Insure the requested currency is the same as the project&apos;s currency</description>
        <errorConditionFormula>AND(LEN(pse__Project__c)&gt;0, TEXT(pse__Project__r.CurrencyIsoCode) != TEXT(CurrencyIsoCode))</errorConditionFormula>
        <errorDisplayField>CurrencyIsoCode</errorDisplayField>
        <errorMessage>The currency for the Resource Request must match the currency for the Project</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__end_date_required</fullName>
        <active>true</active>
        <errorConditionFormula>ISNULL(pse__End_Date__c)</errorConditionFormula>
        <errorDisplayField>pse__End_Date__c</errorDisplayField>
        <errorMessage>End Date is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__hours_required</fullName>
        <active>true</active>
        <errorConditionFormula>OR(ISNULL(pse__SOW_Hours__c), pse__SOW_Hours__c &lt;0)</errorConditionFormula>
        <errorDisplayField>pse__SOW_Hours__c</errorDisplayField>
        <errorMessage>Requested Hours is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__start_date_required</fullName>
        <active>true</active>
        <errorConditionFormula>ISNULL(pse__Start_Date__c)</errorConditionFormula>
        <errorDisplayField>pse__Start_Date__c</errorDisplayField>
        <errorMessage>Start date is required</errorMessage>
    </validationRules>
</CustomObject>